fix: width search input, visibility menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,6 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar-menu__list {
     padding: 22px 0;
@@ -498,6 +497,9 @@ template {
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .search__input {
+    width: 340px;
   }
   .logo {
     width: 132px;
@@ -517,8 +519,6 @@ template {
     display: flex;
   }
   .menu-button {
-    width: 16px;
-    height: 11px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -532,6 +532,9 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 16px;
+    height: 11px;
+    padding: 0;
     background-color: #ffffff;
     border: none;
     cursor: pointer;
