--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,13 +9,15 @@
       padding: 30px 0
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       &__list
         padding: 22px 0
       &__link
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
   .logo
     width: 132px
 @media (max-width: 768px)
@@ -28,12 +30,13 @@
       &__menu-button
         display: flex
   .menu-button
-    width: 16px
-    height: 11px
     display: flex
     justify-content: space-between
     align-items: center
     flex-direction: column
+    width: 16px
+    height: 11px
+    padding: 0
     background-color: #ffffff
     border: none
     cursor: pointer
